[gd_scene load_steps=24 format=2]

[ext_resource path="res://src/blocks/dialogue_block.gd" type="Script" id=1]
[ext_resource path="res://sprites/dialogue/ninepatch2.png" type="Texture" id=2]
[ext_resource path="res://sprites/icons/unfilled_circle_thick.png" type="Texture" id=3]
[ext_resource path="res://themes/default_theme.tres" type="Theme" id=4]
[ext_resource path="res://fonts/UI_20.tres" type="DynamicFont" id=5]
[ext_resource path="res://sprites/icons/trash_small.png" type="Texture" id=6]
[ext_resource path="res://sprites/icons/trash_open_small.png" type="Texture" id=7]
[ext_resource path="res://scenes/title_bar_button_hover.gd" type="Script" id=8]
[ext_resource path="res://src/blocks/dialogue_boxes/black_serif.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/blocks/dialogue_boxes/swappable_dialogue_box.gd" type="Script" id=10]
[ext_resource path="res://fonts/hack_largeish.tres" type="DynamicFont" id=11]
[ext_resource path="res://src/text_edit_fixer.gd" type="Script" id=12]
[ext_resource path="res://sprites/icons/connector_small_unfilled.png" type="Texture" id=13]
[ext_resource path="res://snd/boop.ogg" type="AudioStream" id=14]
[ext_resource path="res://src/random_pitch_sound.gd" type="Script" id=15]
[ext_resource path="res://src/blocks/dialogue_block_line_draw.gd" type="Script" id=16]

[sub_resource type="StyleBoxEmpty" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="Animation" id=4]

resource_name = "kill"
length = 1.0
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 2.78, 0.73, 0.78, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.01, 0.01 ) ]
}

[sub_resource type="Animation" id=5]

resource_name = "spawn"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.1, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 20, 34.45, 74.95, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 385.447, 239.449 )

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 21.0916, 17.0142 )

[node name="DialogueBlock" type="Control" groups=[
"dialogue_block",
]]
use_parent_material = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
node_type = 1

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, 237.164 )
scale = Vector2( 39.0916, 24.2108 )
rect = Rect2( -10, -10, 20, 20 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -385.0
margin_right = 388.0
margin_bottom = 472.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 1
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 256, 256 )
patch_margin_left = 64
patch_margin_top = 64
patch_margin_right = 64
patch_margin_bottom = 64

[node name="TitleBar" type="Control" parent="NinePatchRect"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="HeadConnector" type="TextureButton" parent="NinePatchRect/TitleBar"]
modulate = Color( 0.333333, 0.333333, 0.333333, 1 )
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -12.0
margin_top = 5.0
margin_right = 8.0
margin_bottom = 25.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
expand = true

[node name="DraggableSegment" type="Button" parent="NinePatchRect/TitleBar"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 35.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 4 )
custom_styles/focus = SubResource( 1 )
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
flat = true
align = 1

[node name="Id_Label" type="LineEdit" parent="NinePatchRect/TitleBar"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 1.0
margin_right = 129.0
margin_bottom = 26.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 1
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 4 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.639216, 0.639216, 0.639216, 1 )
max_length = 10
secret_character = "*"
expand_to_text_length = true
focus_mode = 1
context_menu_enabled = false
clear_button_enabled = false
placeholder_text = "ID"
placeholder_alpha = 0.6
caret_blink = true
caret_blink_speed = 0.65
caret_position = 0

[node name="DeleteButton" type="TextureButton" parent="NinePatchRect"]
modulate = Color( 0.639216, 0.639216, 0.639216, 1 )
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -28.0
margin_top = 3.0
margin_right = -4.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )
expand = true
script = ExtResource( 8 )

[node name="Dialogue" parent="NinePatchRect" instance=ExtResource( 9 )]
script = ExtResource( 10 )

[node name="DialogueTextEdit" type="TextEdit" parent="NinePatchRect"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 266.0
margin_right = -13.0
margin_bottom = -40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 1
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 11 )
custom_constants/line_spacing = 0
text = ""
readonly = false
highlight_current_line = false
syntax_highlighting = false
show_line_numbers = false
breakpoint_gutter = false
highlight_all_occurrences = false
override_selected_font_color = false
context_menu_enabled = false
smooth_scrolling = false
v_scroll_speed = 80.0
hiding_enabled = 0
wrap_enabled = true
caret_block_mode = false
caret_blink = true
caret_blink_speed = 0.65
caret_moving_by_right_click = true
script = ExtResource( 12 )
counter_camera_scroll = true

[node name="TailConnector" type="TextureButton" parent="NinePatchRect"]
modulate = Color( 1, 1, 1, 0.321569 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -32.0
margin_top = -28.0
margin_right = 27.0
margin_bottom = -3.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 13 )
expand = true
stretch_mode = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("..")
autoplay = "spawn"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/kill = SubResource( 4 )
anims/spawn = SubResource( 5 )
blend_times = [  ]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = true
stream_paused = false
mix_target = 0
bus = "Master"
script = ExtResource( 15 )

[node name="Area2D" type="Area2D" parent="."]
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitoring = false
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 236.58 )
shape = SubResource( 6 )

[node name="LineDrawNode" type="Node2D" parent="."]
position = Vector2( 0, 310 )
z_index = 4
script = ExtResource( 16 )

[node name="HeadArea2D" type="Area2D" parent="."]
position = Vector2( -10, 7.626 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
priority = 13.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HeadArea2D"]
position = Vector2( 10.0826, 6.46904 )
shape = SubResource( 7 )

[connection signal="mouse_entered" from="NinePatchRect/TitleBar/DraggableSegment" to="." method="_on_DraggableSegment_mouse_entered"]
[connection signal="mouse_exited" from="NinePatchRect/TitleBar/DraggableSegment" to="." method="_on_DraggableSegment_mouse_exited"]
[connection signal="pressed" from="NinePatchRect/TitleBar/DraggableSegment" to="." method="_on_DraggableSegment_pressed"]
[connection signal="focus_exited" from="NinePatchRect/TitleBar/Id_Label" to="." method="_on_Id_Label_focus_exited"]
[connection signal="text_changed" from="NinePatchRect/TitleBar/Id_Label" to="." method="_on_Id_Label_text_changed"]
[connection signal="text_entered" from="NinePatchRect/TitleBar/Id_Label" to="." method="_on_Id_Label_text_entered"]
[connection signal="button_down" from="NinePatchRect/DeleteButton" to="." method="_on_DeleteButton_button_down"]
[connection signal="pressed" from="NinePatchRect/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="button_down" from="NinePatchRect/TailConnector" to="." method="_on_TailConnector_button_down"]
[connection signal="button_up" from="NinePatchRect/TailConnector" to="." method="_on_TailConnector_button_up"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="HeadArea2D" to="." method="_on_HeadArea2D_area_entered"]
[connection signal="area_exited" from="HeadArea2D" to="." method="_on_HeadArea2D_area_exited"]
